[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/ui/game_mode_select.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/menu_bg.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/game_font.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.2, 0.2, 0.4, 0.8 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5
shadow_offset = Vector2( 3, 3 )

[node name="GameModeSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -300.0
margin_top = 100.0
margin_right = 300.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.5 )
text = "Select Mode"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -180.0
margin_right = 150.0
margin_bottom = 300.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotButton" type="Button"]
margin_right = 300.0
margin_bottom = 60.0
rect_min_size = Vector2( 300, 60 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Bot Match"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FriendButton" type="Button"]
margin_top = 80.0
margin_right = 300.0
margin_bottom = 140.0
rect_min_size = Vector2( 300, 60 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Friend Match"

[node name="OnlineButton" type="Button"]
margin_top = 160.0
margin_right = 300.0
margin_bottom = 220.0
rect_min_size = Vector2( 300, 60 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Online Match"

[node name="TournamentButton" type="Button"]
margin_top = 240.0
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 60 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Tournament"

[node name="BackButton" type="Button"]
margin_top = 320.0
margin_right = 300.0
margin_bottom = 380.0
rect_min_size = Vector2( 300, 60 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Back"

[node name="NotImplementedDialog" type="AcceptDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -50.0
margin_right = 150.0
margin_bottom = 50.0
window_title = "Information"
dialog_text = "This feature is coming soon!"
__meta__ = {
"_edit_use_anchors_": false
}